<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvBack"
                android:layout_width="46dp"
                android:layout_height="46dp"
                app:cardCornerRadius="23dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:cardElevation="0dp"
                android:layout_gravity="start">
                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    app:srcCompat="@drawable/ic_arrow_back"
                    android:layout_gravity="center"
                    app:tint="@color/colorPrimarySecondary" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_width="match_parent"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:text="@string/registration_title"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/textTitle"
                android:layout_marginTop="64dp"/>

            <TextView
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_width="match_parent"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:text="@string/registration_description"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/textNormalMin"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="28dp"/>

            <LinearLayout
                style="@style/TextInputLayoutBordered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:padding="16dp">
                <TextView
                    style="@style/TextInputHintStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_login_hint"
                    android:paddingBottom="4dp"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLogin"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:fontFamily="@font/roboto_bold"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                style="@style/TextInputLayoutBordered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:padding="16dp">
                <TextView
                    style="@style/TextInputHintStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_password_hint"
                    android:paddingBottom="4dp"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:fontFamily="@font/roboto_bold"
                    android:inputType="textPassword" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_button"
                android:elevation="10dp"
                style="@style/ButtonSolid"
                android:layout_marginBottom="12dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/layout_loading_container"/>

</FrameLayout>