<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/lHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/background_gradient">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvBack"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    app:cardCornerRadius="23dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    android:layout_gravity="start">
                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:tint="@color/colorTextWhite"
                        app:srcCompat="@drawable/ic_arrow_back"
                        android:layout_gravity="center"/>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textColor="@color/colorTextWhite"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="32dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                android:background="@drawable/shape_bs_background"
                android:orientation="vertical">
                <LinearLayout
                    android:padding="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/btnUserList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="4dp">
                        <TextView
                            android:id="@+id/tvUser"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="\@leonSolya"
                            android:textColor="@color/colorPrimaryLite"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="18sp"/>
                    </com.google.android.material.card.MaterialCardView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="end|center_vertical">
                        <TextView
                            android:id="@+id/tvLikeCount"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="3543"
                            android:textColor="@color/colorPrimary"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="18sp"
                            android:paddingEnd="8dp"/>
                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            app:srcCompat="@drawable/ic_like"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:textColor="@color/colorTextPrimary"/>
                <LinearLayout
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:background="@color/colorBorder"/>
                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:text="@string/recipes_detail_ingradients"
                    android:textColor="@color/colorTextHint"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvIngradients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="16dp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorBorder"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"/>
                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:text="@string/recipes_detail_recipes"
                    android:textColor="@color/colorTextHint"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"/>
                <TextView
                    android:id="@+id/tvRecipes"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="16dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="16dp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:id="@+id/btnLike"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipes_detail_button_like"
                    android:elevation="10dp"
                    style="@style/ButtonEmpty"/>
                <ProgressBar
                    android:id="@+id/pbLike"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:visibility="gone"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:id="@+id/btnShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipes_detail_share"
                    android:elevation="10dp"
                    style="@style/ButtonSolid"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/layout_loading_container"/>

</FrameLayout>